Landing Page: Fixed padding and spacing issues, removed some redundant CSS.

--- a/fcc-landing-page/fcc-landing-page.css
+++ b/fcc-landing-page/fcc-landing-page.css
@@ -4,6 +4,10 @@
         --color-grey: rgb(221, 221, 221);
         --color-orange: rgb(255, 140, 0);
         --color-yellow: rgb(241, 196, 15);
+
+        --inline-height: 3rem;
+
+        --spacing-default: 5rem;
     }
 
     * {
@@ -20,6 +24,7 @@
         color: rgb(0, 0, 0);
         border: none;
         font-size: 1rem;
+        height: var(--inline-height);
         width: 10rem;
         border-radius: 4px;
         font-weight: 500;
@@ -42,11 +47,12 @@
         height: 3rem;
         justify-content: space-between;
         border-bottom: 1px solid grey;
-        width: 100vw;
+        width: 100%;
     }
     header > img {
         align-self: center;
         height: 2rem;
+        margin-left: calc(var(--spacing-default) - 2rem);
     }
     i.fa {
         font-size: 5.5rem;
@@ -55,14 +61,9 @@
     }
     input {
         padding-left: 1rem;
-    }
-    input, button {
         width: 30rem;
-        height: 3rem;
     }
     main {
-        display: flex;
-        flex-direction: column;
         gap: 5rem;
         padding: 5rem 2rem 2rem;
         max-width: 90vw;
@@ -72,11 +73,14 @@
         align-items: center;
         gap: 2rem;
         flex-direction: row;
-        margin-right: 3rem;
+        margin-right: var(--spacing-default);
         text-decoration: none;
     }
     section {
         gap: 2rem;
+    }
+    section.guarantees {
+        min-width: unset !important ;
     }
     section.guarantees > div {
         flex-direction: row;
@@ -107,6 +111,10 @@
     }
     section.price-box > main > p {
         font-size: 2rem;
+    }
+    ul {
+        padding: 1rem;
+        margin: 0;
     }
 
     .fa {
@@ -144,5 +152,8 @@
     }
     .gap-1 {
         gap: 1rem;
+    }
+    .margin-bottom-0 {
+        margin-bottom: 0;
     }
 }
